- Added main content - Added layout for main content - fixed header issues - fixed z-index issues - fixed footer issues

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     background-color: #FFF4E8;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .header {
@@ -31,6 +32,8 @@ nav{
     align-items: center;
     position: sticky;
     top: 0;
+    z-index: 1;
+
 
 }
 
@@ -44,7 +47,7 @@ nav>ul{
 }
 
 nav a{
-    text-decoration: underline;
+    text-decoration: none;
     font-weight: bold;
     padding: 10px;
     color: #6D6E6E;
@@ -81,10 +84,16 @@ nav>ul a:active {
 
 .banner_image {
     display: flex;
-    justify-content: center;
+    /*justify-content: center;*/
     align-items: center;
     width: 100%;
 
+    pointer-events: none;
+    flex-direction:column;
+    justify-content:space-between;
+    align-items:center;
+    position:relative;
+    z-index: -2;
 }
 
 .banner_caption {
@@ -95,7 +104,144 @@ nav>ul a:active {
     font-size: 70px;
     font-weight: 900;
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.30);
+    text-align: left;
 
+}
+
+
+
+.main {
+    background-color: #FFE6CC;
+    border-radius: 10px;
+    width: 85%;
+    align-self: center;
+    position: relative;
+    top: -550px;
+    z-index: -1;
+
+
+}
+
+main a {
+    font-family: "raleway", sans-serif;
+    font-size: 25px;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px;
+    color: #6D6E6E;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+main a:hover {
+    border-radius: 10px;
+    background-color: rgb(91, 179, 205);
+}
+
+main a:active {
+    border-radius: 10px;
+    background-color: rgba(91, 179, 205, 40%);
+}
+
+.main_container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 25px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+}
+
+main_text_container {
+    padding-left:50px;
+    padding-right:50px;
+    height:115px;
+    display:flex;
+}
+
+.main_text {
+    padding-left:70px;
+    padding-right:50px;
+    padding-top:30px;
+    display:flex;
+    font-family: "raleway", sans-serif;
+    font-size: 18px;
+    color: #6D6E6E;
+}
+
+.image_right_container {
+    /*float: right;*/
+    padding-top:40px;
+    padding-bottom:40px;
+}
+
+.image_left_container {
+    float: left;
+    /*float: right;*/
+    padding-top:40px;
+    padding-bottom:40px;
+}
+
+
+.image_right {
+    /*float: right;*/
+    padding-right:50px;
+    width: 90%;
+}
+
+.main_text_right {
+    padding-right:120px;
+    padding-top:30px;
+    height:115px;
+    display:flex;
+    font-family: "raleway", sans-serif;
+    font-size: 18px;
+    color: #6D6E6E;
+
+}
+
+.main_text_header {
+    font-family: "raleway", sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    color: #6D6E6E;
+    padding-left:70px;
+    padding-right:50px;
+    padding-top:50px;
+    display:flex;
+
+}
+
+.main_text_header_right {
+    font-family: "raleway", sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    color: #6D6E6E;
+    padding-right:50px;
+    padding-top:50px;
+
+}
+
+.image_left {
+    padding-left:70px;
+    width: 90%;
+
+}
+
+.spacer {
+    background-color: rgba(0,0,0,0);
+    border-radius: 10px;
+    width: 100%;
+    height: 80px; /*100px?*/
+    align-self: center;
+    text-align: center;
+    color: #6D6E6E;
+}
+
+.spacer i{
+    vertical-align: center;
 }
 
 
@@ -107,13 +253,16 @@ nav>ul a:active {
     border-radius: 10px;
     width: 85%;
     align-self: center;
+    position: absolute;
+    bottom: 120px;
+
 }
 
 .footer_text {
     gap: 50px;
-    padding:20px;
+    padding:10px;
     width:100%;
-    height:115px;
+    height:70px;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -123,10 +272,10 @@ nav>ul a:active {
 }
 
 .footer_subscript {
-    gap: 25px;
-    padding:20px;
+    gap: 50px;
+    padding:10px;
     width:100%;
-    height:115px;
+    height:100px;
     display:flex;
     align-items: center;
     justify-content: center;
